RESOLVED FIXED191967
REGRESSION (r237738): Command Down Arrow doesn't scroll to the end of a page anymore
https://bugs.webkit.org/show_bug.cgi?id=191967
Summary REGRESSION (r237738): Command Down Arrow doesn't scroll to the end of a page ...
Daniel Bates
Reported 2018-11-26 09:46:33 PST
Steps to reproduce: 1. Visit <https://www.apple.com>. 2. Press Command + Down Arrow. Then nothing happens. But the page should be scrolled to the bottom.
Attachments
Patch and layout tests (20.16 KB, patch)
2018-11-26 09:49 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2018-11-26 09:47:59 PST
Following r237738 the value of the enumerations used to identify modifier keys (e.g. Shift) changed to match the values of the corresponding enumerations in GraphicsServices, which are the enumerations UIKit uses to computes the modifier flags bitmask when instantiating a WebEvent to pass to WebKit. Before r237738 WebKit was using enumerations whose values matched the values of the corresponding UIKit public API UIKeyModifier* enumerations. For non-content editable elements, WebKit intercepts UIKit events in -_handleKeyUIEvent, synthesizes and dispatches its own WebEvent. However it was creating WebEvents with a modifier flags bitmask built from the UIKeyModifier* enumerations, -_modifierFlags, as opposed to a bitmask from the GraphicsServices enumerations, -_gsModifierFlags.
Daniel Bates
Comment 2 2018-11-26 09:49:39 PST
Created attachment 355645 [details] Patch and layout tests
Daniel Bates
Comment 3 2018-11-26 14:57:48 PST
Comment on attachment 355645 [details] Patch and layout tests Clearing flags on attachment: 355645 Committed r238526: <https://trac.webkit.org/changeset/238526>
Daniel Bates
Comment 4 2018-11-26 14:57:50 PST
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 5 2018-11-26 14:58:03 PST
Note You need to log in before you can comment on or make changes to this bug.